# SOMA-Self-Organizing-Modular-Architecture

./: Cargo.toml  IDEAS.md  PR_DESCRIPTION.md  README.md  REFACTORING.md  ROADMAP.md  V1.2_TEST_REPORT.md  test_v1.2_conscious_routing.sh
soma-api/: Cargo.toml
soma-api/src/: background.rs  config.rs  errors.rs  lib.rs  main.rs  mesh.rs  responses.rs
soma-api/src/handlers/: cells.rs  conscious.rs  domino.rs  mesh.rs  mod.rs  system.rs  websocket.rs
soma-bridge/: Cargo.toml
soma-bridge/src/: lib.rs  link.rs  signal.rs  transport.rs
soma-cognitive/: Cargo.toml  README.md
soma-cognitive/examples/: cognitive_mesh_demo.rs  distributed_consensus_demo.rs  semantic_embeddings_demo.rs
soma-cognitive/src/: braid.rs  consensus.rs  embeddings.rs  lib.rs  memory.rs  metrics.rs  pulse.rs
soma-conscious/: Cargo.toml
soma-conscious/src/: decision_tracker.rs  feedback.rs  lib.rs  reflect.rs
soma-core/: Cargo.toml
soma-core/src/: cell.rs  config.rs  lib.rs  stem.rs
soma-domino/: Cargo.toml
soma-domino/examples/: demo.rs
soma-domino/src/: engine.rs  fuzzy_luck.rs  lib.rs  qstar_loop.rs  string_resonance.rs
soma-domino/tests/: domino_engine_tests.rs
soma-mind/: Cargo.toml
soma-mind/src/: council.rs  lib.rs
soma-sim/: Cargo.toml
soma-sim/src/: main.rs  pulse.rs  viz.rs
soma-vnp/: Cargo.toml
soma-vnp/src/: lib.rs  neuron.rs
