[workspace]
resolver = "2"
members = [
    "soma-core",
    "soma-vnp",
    "soma-bridge",
    "soma-mind",
    "soma-sim",
    "soma-api",
    "soma-conscious",
    "soma-cognitive"
]

[workspace.package]
version = "1.0.0"
edition = "2021"
authors = ["SOMA Collective"]
license = "MIT OR Apache-2.0"

[workspace.dependencies]
# Общие зависимости для всех модулей
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"
