[package]
name = "soma-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soma-core = { path = "../soma-core" }
soma-bridge = { path = "../soma-bridge" }
axum = { version = "0.7", features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }

[[bin]]
name = "soma-api"
path = "src/main.rs"
