[package]
name = "soma-api"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soma-core = { path = "../soma-core" }
soma-bridge = { path = "../soma-bridge" }
soma-conscious = { path = "../soma-conscious" }
axum = { version = "0.7", features = ["ws"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
futures = "0.3"
tokio-tungstenite = "0.24"

[[bin]]
name = "soma-api"
path = "src/main.rs"

[[bin]]
name = "connect_peer"
path = "src/bin/connect_peer.rs"
