[package]
name = "soma-mind"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soma-core = { path = "../soma-core" }
soma-vnp = { path = "../soma-vnp" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[lib]
path = "src/lib.rs"
