[package]
name = "soma-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soma-core = { path = "../soma-core" }
soma-vnp = { path = "../soma-vnp" }
soma-mind = { path = "../soma-mind" }
soma-bridge = { path = "../soma-bridge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "soma-sim"
path = "src/main.rs"
