[package]
name = "soma-sim"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
soma-core = { path = "../soma-core" }
soma-vnp = { path = "../soma-vnp" }
soma-mind = { path = "../soma-mind" }
soma-bridge = { path = "../soma-bridge" }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true

[[bin]]
name = "soma-sim"
path = "src/main.rs"

[[bin]]
name = "pulse"
path = "src/bin/pulse.rs"

[[bin]]
name = "resonance"
path = "src/bin/resonance.rs"

[[bin]]
name = "genesis"
path = "src/bin/genesis.rs"
